Fix iframe embeds on mobile, widen articles on mobile

--- a/static/css/article.less
+++ b/static/css/article.less
@@ -33,6 +33,7 @@
 
 .article-body {
   padding: 0 10%;
+  background: #fff;
 }
 
 .article-body h1 {
