--- a/static/css/news.less
+++ b/static/css/news.less
@@ -7,6 +7,10 @@
   background-size: cover;
   position: relative;
 
+  @media (min-width: 0) and (max-width: 768px) {
+    margin-bottom: 5px;
+  }
+
   &:after {
     content: '';
     position: absolute;
