--- a/static/css/paragraph.less
+++ b/static/css/paragraph.less
@@ -116,7 +116,7 @@
   }
 }
 
-img {
+img, iframe {
   max-width: 100%;
   height: auto;
 }
